--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
   },
   "dependencies": {
     "babel-runtime": "^6.26.0",
-    "mjml-button": "^4.4.0-beta.1",
-    "mjml-core": "^4.4.0-beta.1",
-    "mjml-image": "^4.4.0-beta.1",
-    "mjml-section": "^4.4.0-beta.1",
-    "mjml-text": "^4.4.0-beta.1",
-    "mjml-validator": "^4.4.0-beta.1"
+    "mjml-button": "^4.4.0",
+    "mjml-core": "^4.4.0",
+    "mjml-image": "^4.4.0",
+    "mjml-section": "^4.4.0",
+    "mjml-text": "^4.4.0",
+    "mjml-hero": "^4.4.0",
+    "mjml-validator": "^4.4.0"
   }
 }
